[gd_scene load_steps=10 format=3 uid="uid://buhn06bwytmyh"]

[ext_resource type="Script" uid="uid://ef8rjkc5rehh" path="res://scripts/scenes/level_3.gd" id="1_kvvkh"]
[ext_resource type="PackedScene" uid="uid://duydi7lytqxks" path="res://scenes/enviornment/CaveEnv.tscn" id="1_r8unp"]
[ext_resource type="PackedScene" uid="uid://b6t1s1ntpjpeu" path="res://scenes/items/starter_weapon.tscn" id="3_0fm5q"]
[ext_resource type="Texture2D" uid="uid://bp82imlehhbru" path="res://assets/prefab/playtesting2.png" id="3_aaqj5"]
[ext_resource type="PackedScene" uid="uid://c8k8dm81jp0pu" path="res://assets/model/enviornment/mushroom_gray.blend" id="5_cpie4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0fm5q"]
transparency = 2
alpha_scissor_threshold = 0.596
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("3_aaqj5")
uv1_scale = Vector3(-1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_cpie4"]
size = Vector3(9, 6.38489, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_aaqj5"]
size = Vector3(4.7608, 8, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0fm5q"]
size = Vector3(7, 7, 1)

[node name="Level3" type="Node3D"]
script = ExtResource("1_kvvkh")

[node name="CaveEnv" parent="." instance=ExtResource("1_r8unp")]

[node name="LightCover" type="CSGBox3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -2.44778, 34, -21.8706)
size = Vector3(62.9701, 1, 65.3029)

[node name="Cave" type="Node3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="Cave"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 8.5)
use_collision = true
size = Vector3(5, 1, 10)

[node name="CSGBox3D3" type="CSGBox3D" parent="Cave"]
transform = Transform3D(0.993461, 0.114174, 0, -0.114174, 0.993461, 0, 0, 0, 1, -2.21402, 1.54724, 8.42204)
use_collision = true
size = Vector3(1.14246, 2.25252, 10)

[node name="CSGBox3D7" type="CSGBox3D" parent="Cave"]
transform = Transform3D(0.921287, 0.388883, 0, -0.388883, 0.921287, 0, 0, 0, 1, -1.69594, 3.51611, 8.42204)
use_collision = true
size = Vector3(1.14246, 2.20707, 10)

[node name="CSGBox3D4" type="CSGBox3D" parent="Cave"]
transform = Transform3D(0.984053, -0.177875, 0, 0.177875, 0.984053, 0, 0, 0, 1, 1.94056, 2.3227, 8.42204)
use_collision = true
size = Vector3(1.14246, 3.10664, 10)

[node name="CSGBox3D8" type="CSGBox3D" parent="Cave"]
transform = Transform3D(0.918032, -0.396507, 0, 0.396507, 0.918032, 0, 0, 0, 1, 1.36076, 3.79367, 8.42204)
use_collision = true
size = Vector3(1.14246, 2.8082, 10)

[node name="CSGBox3D5" type="CSGBox3D" parent="Cave"]
transform = Transform3D(0.897474, -0.441067, 0, 0.441067, 0.897474, 0, 0, 0, 1, 0.873279, 4.17279, 12.5912)
use_collision = true
size = Vector3(1.51361, 1.3852, 1.66162)

[node name="CSGBox3D6" type="CSGBox3D" parent="Cave"]
transform = Transform3D(0.853851, -0.520518, 0, 0.520518, 0.853851, 0, 0, 0, 1, -0.4938, 4.48611, 8.42204)
use_collision = true
size = Vector3(1.86472, 1.75118, 10)

[node name="Cave2" type="Node3D" parent="."]

[node name="CSGBox3D3" type="CSGBox3D" parent="Cave2"]
transform = Transform3D(0.829198, 0.0952962, -0.550772, -0.114174, 0.993461, -3.26799e-09, 0.547171, 0.062884, 0.834656, 15.4862, 1.54724, -18.9067)
use_collision = true
size = Vector3(1.14246, 2.25252, 7.57617)

[node name="CSGBox3D7" type="CSGBox3D" parent="Cave2"]
transform = Transform3D(0.768958, 0.324583, -0.550772, -0.388883, 0.921287, 3.19293e-10, 0.507419, 0.214186, 0.834656, 15.9272, 3.51611, -18.6344)
use_collision = true
size = Vector3(1.14246, 2.20707, 7.60742)

[node name="CSGBox3D4" type="CSGBox3D" parent="Cave2"]
transform = Transform3D(0.821346, -0.148464, -0.550772, 0.177875, 0.984053, -6.53598e-09, 0.541989, -0.0979685, 0.834656, 18.861, 2.3227, -16.4779)
use_collision = true
size = Vector3(1.14246, 3.10664, 7.23926)

[node name="CSGBox3D5" type="CSGBox3D" parent="Cave2"]
transform = Transform3D(0.749082, -0.368139, -0.550772, 0.441068, 0.897474, 1.33913e-08, 0.494304, -0.242928, 0.834656, 17.9506, 4.17279, -17.036)
use_collision = true
size = Vector3(1.51361, 1.3852, 7.16797)

[node name="CSGBox3D6" type="CSGBox3D" parent="Cave2"]
transform = Transform3D(0.712672, -0.434453, -0.550772, 0.520518, 0.853851, 2.64632e-08, 0.470277, -0.286687, 0.834656, 16.8113, 4.48611, -17.7915)
use_collision = true
size = Vector3(1.86472, 1.75118, 7.17432)

[node name="Foreground" type="Node3D" parent="."]

[node name="BottomForeground" type="CSGPolygon3D" parent="Foreground"]
transform = Transform3D(0.707107, -0.408607, 0.577096, 0, 0.816138, 0.577858, -0.707107, -0.408607, 0.577096, 12.3478, 8.20128, 5.69476)
polygon = PackedVector2Array(-11.445, 4.65977, -6.65454, -2.77285, -5.54752, -2.51645, -4.48747, -0.473558, -3.25219, -0.770624, -2.45617, 0.456678, -1.1534, -1.15241, -0.551941, -2.93411, -0.129967, -4.24131, 1.48571, -4.37527, 1.54064, -2.63834, 2.0184, -0.939416, 3.24208, -0.270361, 4.08284, -0.920927, 5.90006, -0.843135, 7.04859, -1.78811, 7.97667, -0.321296, 11.0453, -2.3734, 12.7573, -0.999247, 14.7458, -0.312472, 16.9955, -1.24748, 17.7003, -6.54239, 19.7543, -8.98643, 4.57775, -8.7742, 1.98099, -7.07892, -0.068769, -7.11774, -2.35892, -8.66202, -16.721, -8.59886, -13.772, 7.64761)

[node name="TopForeground" type="CSGPolygon3D" parent="Foreground"]
transform = Transform3D(-0.707107, 0.408607, 0.577096, 7.1349e-08, -0.816138, 0.577857, 0.707107, 0.408607, 0.577096, 10.824, 11.2448, 4.171)
polygon = PackedVector2Array(-17.3002, -8.51513, -22.3287, -4.76837, -24.3522, 1.23061, -24.6845, 9.53865, -17.3754, 10.2111, -16.5882, 5.56197, -17.3205, 4.74707, -17.156, -0.610989, -16.2835, -4.43483, -14.0582, 3.56287, -12.1939, -2.9365, -11.1783, 1.05243, -10.6429, 0.128852, -9.51337, -2.66111, -7.89666, -0.634623, -7.78134, 0.540089, -6.55702, -0.413156, -5.13417, 0.534419, -3.11885, -0.660524, 0.230239, -1.08452, 2.95017, 0.430114, 4.08255, 1.81199, 5.91868, -0.648066, 6.38807, 0.585849, 7.73384, -1.15294, 9.4146, -0.354598, 10.9718, 3.64157, 18.7196, -0.1879, 18.6287, -8.73999)

[node name="Rock" type="Node3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="Rock"]
transform = Transform3D(0.492743, -0.115122, 0.862526, 0.422547, 0.898158, -0.121515, -0.760696, 0.424334, 0.491206, 4.49265, 1.16635, -4.38511)
use_collision = true
size = Vector3(1, 0.859802, 0.992432)

[node name="CSGBox3D5" type="CSGBox3D" parent="Rock"]
transform = Transform3D(0.134452, -0.384328, 0.913354, -0.804344, 0.496007, 0.327119, -0.578751, -0.778632, -0.242443, 4.03896, 1.1787, -3.932)
use_collision = true
size = Vector3(1, 0.859802, 0.992432)

[node name="CSGBox3D4" type="CSGBox3D" parent="Rock"]
transform = Transform3D(0.960977, -0.251928, 0.114264, 0.247256, 0.597007, -0.763183, 0.12405, 0.761653, 0.636, 3.82382, 1.35339, -4.50692)
use_collision = true
size = Vector3(1, 0.859802, 0.992432)

[node name="CSGBox3D3" type="CSGBox3D" parent="Rock"]
transform = Transform3D(-0.190893, -0.375926, 0.906774, 0.477542, 0.771513, 0.420382, -0.857621, 0.51327, 0.0322439, 3.82886, 0.999399, -4.43057)
use_collision = true
size = Vector3(0.65332, 1.70105, 1.60303)

[node name="Lights" type="Node3D" parent="."]

[node name="OmniLight3D3" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.115644, 2.43602, 16.6918)
light_color = Color(0.314773, 0.474335, 0.923773, 1)
light_energy = 12.942
light_specular = 0.0
shadow_enabled = true
omni_range = 20.9488

[node name="SpotLight3D" type="SpotLight3D" parent="Lights"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 12.371278, 2.83232, -11.371278)
light_color = Color(0.784638, 0.0972639, 0.0522048, 1)
spot_range = 10.6478

[node name="SpotLight3D2" type="SpotLight3D" parent="Lights"]
transform = Transform3D(0.764584, -6.18172e-08, 0.644524, -7.42178e-09, -1, -8.71071e-08, 0.644524, 6.18172e-08, -0.764584, 18.1791, 1.82707, -19.1108)
light_color = Color(0.784638, 0.0972639, 0.0522048, 1)
light_energy = 5.8
shadow_enabled = true
spot_range = 11.5053

[node name="SpotLight3D3" type="SpotLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 5.65971, 16.8481, -8.48112)
light_color = Color(0.252028, 0.252028, 0.252028, 1)
light_energy = 2.6
spot_range = 41.64
spot_angle = 47.0548
spot_angle_attenuation = 0.026278

[node name="lol" type="Node3D" parent="."]
transform = Transform3D(0.819242, 0, 0.573448, 0, 1, 0, -0.573448, 0, 0.819242, 11.3835, 0, -3.84263)
visible = false

[node name="CSGBox3D" type="CSGBox3D" parent="lol"]
transform = Transform3D(-0.488213, 0.0520542, 0.871171, 0.106021, 0.994364, 0, -0.866261, 0.0923625, -0.49098, 3.93125, 0.741372, -9.61147)
use_collision = true
size = Vector3(4.28323, 1, 5.01685)
material = SubResource("StandardMaterial3D_0fm5q")

[node name="CSGBox3D2" type="CSGBox3D" parent="lol"]
transform = Transform3D(-0.488213, 0.0520542, 0.871171, 0.106021, 0.994364, 0, -0.866261, 0.0923625, -0.49098, 0.613146, 1.46194, -15.4989)
use_collision = true
size = Vector3(9.33764, 1, 5.01685)

[node name="Area3D2" type="Area3D" parent="lol"]
transform = Transform3D(0.873135, 0, 0.487479, 0, 1, 0, -0.487479, 0, 0.873135, 1.24624, 2.98932, -14.35)

[node name="CollisionShape3D" type="CollisionShape3D" parent="lol/Area3D2"]
transform = Transform3D(1, 0, 1.19209e-07, 0, 1, 0, -1.19209e-07, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_cpie4")

[node name="SpotLight3D4" type="SpotLight3D" parent="lol"]
transform = Transform3D(0.82973, -0.0183308, 0.557864, 1.49012e-08, 0.999461, 0.0328412, -0.558165, -0.0272493, 0.829282, 11.9969, 3.46946, 2.32774)
light_energy = 16.0
spot_range = 48.6821
spot_angle = 13.4805

[node name="Floor" type="CSGPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
use_collision = true
polygon = PackedVector2Array(-3.98455, -0.840773, -3.10856, 3.27681, 2.45225, 6.75517, 8.30089, 10.2509, 12.5262, 16.0644, 14.871086, 17.088366, 17.6589, 21.3724, 21.0033, 19.2714, 17.6632, 14.2543, 18.1433, 13.1447, 17.4397, 10.5022, 12.5636, 3.98146, 8.09603, 0.932292, 4.71219, -0.439084, 3, -3, 2.4064, -3.65599, -2.47596, -3.54116)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.139069, -0.5, 0.00525618)
shape = SubResource("BoxShape3D_aaqj5")

[node name="StarterWeapon" parent="." instance=ExtResource("3_0fm5q")]
transform = Transform3D(0.381517, 0.824205, -0.418485, -0.907492, 0.42007, 1.35227e-08, 0.175793, 0.379772, 0.908224, 4.68858, 1.36303, -3.52192)

[node name="Area3D3" type="Area3D" parent="."]
transform = Transform3D(0.817205, 0, -0.576347, 0, 1, 0, 0.576347, 0, 0.817205, 16.0511, 3, -15.6442)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D3"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_0fm5q")

[node name="Area3D4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -2.37805, -7)

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Area3D4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -2, -8.74228e-08)
polygon = PackedVector2Array(-13.915, 15.8837, 2.11915, 16.9394, 17.9553, 6.51393, 27.589, -8.99234, 18.3606, -21.2807, -2.10715, -21.4602, -19.4329, -11.4059, -25.1782, 9.24137)

[node name="Nature" type="Node3D" parent="."]

[node name="mushroom_gray" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.5582101, 0.13481638, -0.8186735, -0.28404757, 0.9581383, -0.03589408, 0.7795632, 0.2525786, 0.5731365, 2.5135865, 1.0089997, 3.0665245)

[node name="mushroom_gray2" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.89033055, -0.1928327, 0.41246465, 0.23019503, 0.97222203, -0.04236349, -0.39283818, 0.13266483, 0.909988, 2.1211624, 1.0089997, 2.451322)

[node name="mushroom_gray4" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.56335306, 0, -0.8262163, 0, 1, 0, 0.8262163, 0, 0.56335306, -2.1039162, 1.0089997, -2.7111797)

[node name="mushroom_gray5" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 3.0345542, 1.0089997, -3.4115787)

[node name="mushroom_gray6" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.56335306, 0, -0.8262163, 0, 1, 0, 0.8262163, 0, 0.56335306, 3.3953772, 1.0089997, -3.1953938)

[node name="mushroom_gray7" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 4.115998, 1.0089997, -3.0566947)

[node name="mushroom_gray8" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.56335306, 0, -0.8262163, 0, 1, 0, 0.8262163, 0, 0.56335306, 3.1026027, 1.0089997, -3.0045564)

[node name="mushroom_gray9" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 4.0533037, 1.0089997, -7.128345)

[node name="mushroom_gray10" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.6853903, -0.12052337, -0.71813256, 0.308312, 0.9414777, 0.13624784, 0.6596846, -0.31479177, 0.68243843, 4.2215867, 1.0089997, -7.4932323)

[node name="mushroom_gray11" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 4.4704, 1.0089997, -7.438641)

[node name="mushroom_gray12" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.56335306, 0, -0.8262163, 0, 1, 0, 0.8262163, 0, 0.56335306, 14.500202, 1.0090001, -15.937475)

[node name="mushroom_gray14" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 14.862152, 1.0090002, -16.119892)

[node name="mushroom_gray13" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.56335306, 0, -0.8262163, 0, 1, 0, 0.8262163, 0, 0.56335306, 16.62634, 1.0089997, -13.319144)

[node name="mushroom_gray18" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.019092798, 0, -0.9998177, 0.30377814, 0.9527251, 0.005801032, 0.9525515, -0.3038335, 0.018190188, 17.097052, 1.0089997, -12.910554)

[node name="mushroom_gray15" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 16.809244, 1.0089997, -12.952057)

[node name="mushroom_gray16" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.56335306, 0, -0.8262163, 0, 1, 0, 0.8262163, 0, 0.56335306, 17.331623, 1.0089997, -12.762537)

[node name="mushroom_gray17" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.9204327, -0.052419063, 0.38737056, 0.13977155, 0.9695877, -0.20090696, -0.36505833, 0.23906472, 0.8997669, 17.331623, 1.0089997, -12.762537)

[node name="mushroom_gray3" parent="Nature" instance=ExtResource("5_cpie4")]
transform = Transform3D(0.60480267, 0.21864586, -0.7657727, 0.11074884, 0.9291372, 0.3527589, 0.78863716, -0.29815793, 0.5377298, 2.602254, 1.0089998, 2.8886898)

[node name="Rocks" type="Node3D" parent="."]

[node name="CSGBox3D17" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.46818513, 0.85451615, 0.22495706, 0.787204, 0.518995, -0.33309796, -0.40138817, 0.02113609, -0.9156648, -2.2387545, 0.996559, -0.6858754)
use_collision = true
size = Vector3(1.3739, 1.31836, 1)

[node name="CSGBox3D19" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.49000224, 0.68740886, -0.53606784, 0.791943, 0.608039, 0.05580959, 0.3643143, -0.39718813, -0.84232926, -3.3125043, 0.78432894, -1.2906036)
use_collision = true
size = Vector3(1.3739, 1.31836, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(0.7304066, -0.66131085, 0.17080669, 0.68301296, 0.70710695, -0.18301298, 0.00024984777, 0.25033662, 0.968159, -3.6786141, 1.2406089, -0.49830842)
use_collision = true
size = Vector3(2, 1.97266, 1)

[node name="CSGBox3D12" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.720691, 0.693161, -0.0114859, 0.65156, 0.671593, -0.352749, -0.236798, -0.261707, -0.935647, 7.552098, 1.3829561, -9.036094)
use_collision = true
size = Vector3(1.84595, 1.80054, 1)

[node name="CSGBox3D13" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.315425, 0.60148, -0.733981, 0.830795, 0.548804, 0.0927018, 0.45857, -0.580548, -0.672813, 8.280829, 1.0354761, -9.774103)
use_collision = true
size = Vector3(1.3739, 1.31836, 1)

[node name="CSGBox3D14" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(0.34967726, 0.7117399, -0.6092225, 0.5737188, -0.67676246, -0.46134508, -0.7406565, -0.18820058, -0.64498675, -0.8616826, 0.981377, -4.329199)
use_collision = true
size = Vector3(1.84595, 1.80054, 1)

[node name="CSGBox3D15" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.015852481, -0.002502799, -0.9998708, 0.5085229, -0.8610282, -0.005907203, -0.8609023, -0.5085513, 0.014921546, -0.5387035, 0.77096856, -5.164966)
use_collision = true
size = Vector3(1.3739, 1.31836, 1)

[node name="CSGBox3D16" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.4556924, -0.731785, 0.50678897, 0.5737188, -0.67676246, -0.4613451, 0.6805811, 0.080522835, 0.72823405, 15.165338, 0.9813775, -8.5103655)
use_collision = true
size = Vector3(1.84595, 1.80054, 1)

[node name="CSGBox3D20" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.11204784, -0.07297441, 0.9910191, 0.50852287, -0.86102813, -0.0059072035, 0.85372674, 0.5032945, 0.13358606, 14.721937, 0.77096903, -7.7317653)
use_collision = true
size = Vector3(1.3739, 1.31836, 1)

[node name="CSGBox3D21" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.80611956, -0.5662638, -0.17180252, 0.5737187, -0.6767624, -0.46134505, 0.14497367, -0.47046614, 0.8704273, 3.674882, 0.9813775, 0.4839853)
use_collision = true
size = Vector3(1.84595, 1.80054, 1)

[node name="CSGBox3D22" type="CSGBox3D" parent="Rocks"]
transform = Transform3D(-0.69195455, -0.41273206, 0.592326, 0.5085229, -0.86102825, -0.0059072045, 0.51244795, 0.2971244, 0.80567616, 2.8067923, 0.77096903, 0.705891)
use_collision = true
size = Vector3(1.3739, 1.31836, 1)

[connection signal="body_entered" from="lol/Area3D2" to="." method="_on_area_3d_2_body_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Area3D3" to="." method="_on_area_3d_3_body_entered"]
[connection signal="body_entered" from="Area3D4" to="." method="_on_area_3d_4_body_entered"]
